--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -46,6 +46,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ClosedXML, Version=0.64.0.0, Culture=neutral, PublicKeyToken=fd1eb21b62ae805b, processorArchitecture=MSIL">
+      <HintPath>packages\ClosedXML.0.64.0\lib\net40-client\ClosedXML.dll</HintPath>
+    </Reference>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.0.5022.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\DocumentFormat.OpenXml.1.0\lib\DocumentFormat.OpenXml.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -418,16 +424,6 @@
     <Content Include="Views\customers\Details.cshtml" />
     <Content Include="Views\customers\Edit.cshtml" />
     <Content Include="Views\customers\Index.cshtml" />
-    <Content Include="Views\brands\Create.cshtml" />
-    <Content Include="Views\brands\Delete.cshtml" />
-    <Content Include="Views\brands\Details.cshtml" />
-    <Content Include="Views\brands\Edit.cshtml" />
-    <Content Include="Views\brands\Index.cshtml" />
-    <Content Include="Views\colors\Create.cshtml" />
-    <Content Include="Views\colors\Delete.cshtml" />
-    <Content Include="Views\colors\Details.cshtml" />
-    <Content Include="Views\colors\Edit.cshtml" />
-    <Content Include="Views\colors\Index.cshtml" />
     <Content Include="Views\orders\Create.cshtml" />
     <Content Include="Views\orders\Delete.cshtml" />
     <Content Include="Views\orders\Details.cshtml" />
@@ -462,6 +458,7 @@
     <Content Include="Views\products\Details.cshtml" />
     <Content Include="Views\products\Edit.cshtml" />
     <Content Include="Views\products\Index.cshtml" />
+    <Content Include="Views\User\Orders.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
