--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -192,9 +192,6 @@
     <Compile Include="Models\product.cs">
       <DependentUpon>Models.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\product_seri.cs">
-      <DependentUpon>Models.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\promocode.cs">
       <DependentUpon>Models.tt</DependentUpon>
     </Compile>
@@ -448,7 +445,7 @@
     <Content Include="Views\Home\SearchOrders.cshtml" />
     <Content Include="Views\Home\YourOrders.cshtml" />
     <Content Include="Views\Home\SearchOrderPage.cshtml" />
-    <Content Include="Views\Home\Details_Pro_Seri.cshtml" />
+    <Content Include="Views\Home\Details_Pro.cshtml" />
     <Content Include="Views\Admin\Pending.cshtml" />
     <Content Include="Views\products\Create.cshtml" />
     <Content Include="Views\products\Delete.cshtml" />
