--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -59,6 +59,12 @@
       <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -201,8 +207,6 @@
     <Compile Include="Models\user.cs">
       <DependentUpon>Models.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\ViewModels\CartVM.cs" />
-    <Compile Include="Models\ViewModels\CheckOutVM.cs" />
     <Compile Include="Models\ViewModels\CustomerVM.cs" />
     <Compile Include="Models\ViewModels\ProductVM.cs" />
     <Compile Include="Models\ViewModels\SignInVM.cs" />
@@ -211,6 +215,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Models\Models.Context.tt">
@@ -446,13 +451,13 @@
     <Content Include="Views\Home\YourOrders.cshtml" />
     <Content Include="Views\Home\SearchOrderPage.cshtml" />
     <Content Include="Views\Home\Details_Pro.cshtml" />
-    <Content Include="Views\Admin\Pending.cshtml" />
     <Content Include="Views\products\Create.cshtml" />
     <Content Include="Views\products\Delete.cshtml" />
     <Content Include="Views\products\Details.cshtml" />
     <Content Include="Views\products\Edit.cshtml" />
     <Content Include="Views\products\Index.cshtml" />
     <Content Include="Views\User\Orders.cshtml" />
+    <Content Include="Views\orders\BagCartOrders.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
