--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -461,6 +461,7 @@
     <Content Include="Views\User\Orders.cshtml" />
     <Content Include="Views\orders\BagCartOrders.cshtml" />
     <Content Include="Views\Home\Details_Pro.cshtml" />
+    <Content Include="Views\orders\Waitting.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
