--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -462,6 +462,7 @@
     <Content Include="Views\orders\BagCartOrders.cshtml" />
     <Content Include="Views\Home\Details_Pro.cshtml" />
     <Content Include="Views\orders\Waitting.cshtml" />
+    <Content Include="Views\orders\Request_Cancel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
