--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -148,68 +148,156 @@
     <Content Include="wwwroot\Images\Others\Frame 32.png" />
     <Content Include="wwwroot\Images\Others\Group 51.png" />
     <Content Include="wwwroot\Images\Others\Group 52.png" />
-    <Content Include="wwwroot\Images\Products\find-n2-flip-black.png" />
-    <Content Include="wwwroot\Images\Products\find-n2-flip-purple.png" />
-    <Content Include="wwwroot\Images\Products\find-x5-black.png" />
-    <Content Include="wwwroot\Images\Products\find-x5-white.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_s22+_black.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_s22+_green.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_s22+_pink.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_s22+_white.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_s23+_black.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_s23+_cream.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_s23+_green.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_s23+_purple.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_s23_ultra_black.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_s23_ultra_cream.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_s23_ultra_green.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_s23_ultra_purple.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_z_flip_4_blue.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_z_flip_4_gold.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_z_flip_4_grey.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_z_flip_4_purple.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_z_fold_4_beige.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_z_fold_4_black.png" />
-    <Content Include="wwwroot\Images\Products\galaxy_z_fold_4_green.png" />
-    <Content Include="wwwroot\Images\Products\iphone-13-black.png" />
-    <Content Include="wwwroot\Images\Products\iphone-13-blue.png" />
-    <Content Include="wwwroot\Images\Products\iphone-13-green.png" />
-    <Content Include="wwwroot\Images\Products\iphone-13-mini-blue.png" />
-    <Content Include="wwwroot\Images\Products\iphone-13-mini-green.png" />
-    <Content Include="wwwroot\Images\Products\iphone-13-mini-pink.png" />
-    <Content Include="wwwroot\Images\Products\iphone-13-mini-red.png" />
-    <Content Include="wwwroot\Images\Products\iphone-13-mini-white.png" />
-    <Content Include="wwwroot\Images\Products\iphone-13-pink.png" />
-    <Content Include="wwwroot\Images\Products\iphone-13-red.png" />
-    <Content Include="wwwroot\Images\Products\iphone-13-white.png" />
-    <Content Include="wwwroot\Images\Products\iphone-14-black.png" />
-    <Content Include="wwwroot\Images\Products\iphone-14-blue.png" />
-    <Content Include="wwwroot\Images\Products\iphone-14-pro-black.png" />
-    <Content Include="wwwroot\Images\Products\iphone-14-pro-gold.png" />
-    <Content Include="wwwroot\Images\Products\iphone-14-pro-max-black.png" />
-    <Content Include="wwwroot\Images\Products\iphone-14-pro-max-gold.png" />
-    <Content Include="wwwroot\Images\Products\iphone-14-pro-max-purple.png" />
-    <Content Include="wwwroot\Images\Products\iphone-14-pro-max-silver.png" />
-    <Content Include="wwwroot\Images\Products\iphone-14-pro-purple.png" />
-    <Content Include="wwwroot\Images\Products\iphone-14-pro-silver.png" />
-    <Content Include="wwwroot\Images\Products\iphone-14-red.png" />
-    <Content Include="wwwroot\Images\Products\iphone-14-white.png" />
-    <Content Include="wwwroot\Images\Products\iphone14-purple.png" />
-    <Content Include="wwwroot\Images\Products\pixel-6a-black.png" />
-    <Content Include="wwwroot\Images\Products\pixel-6a-green.png" />
-    <Content Include="wwwroot\Images\Products\pixel-6a-white.png" />
-    <Content Include="wwwroot\Images\Products\pixel-7-black.png" />
-    <Content Include="wwwroot\Images\Products\pixel-7-green.png" />
-    <Content Include="wwwroot\Images\Products\pixel-7-pro-black.png" />
-    <Content Include="wwwroot\Images\Products\pixel-7-pro-green.png" />
-    <Content Include="wwwroot\Images\Products\pixel-7-pro-white.png" />
-    <Content Include="wwwroot\Images\Products\pixel-7-white.png" />
-    <Content Include="wwwroot\Images\Products\reno8-black.png" />
-    <Content Include="wwwroot\Images\Products\reno8-gold.png" />
-    <Content Include="wwwroot\Images\Products\xiaomi-12t-all.png" />
-    <Content Include="wwwroot\Images\Products\xiaomi-12t-black.png" />
-    <Content Include="wwwroot\Images\Products\xiaomi-13-pro-all.png" />
-    <Content Include="wwwroot\Images\Products\xiaomi-note-11-pro-all.png" />
+<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
+  <Import Project="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+  <PropertyGroup>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProductVersion>
+    </ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{0CC6E3AF-E91D-4EAD-B38F-F75BF5F42774}</ProjectGuid>
+    <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>WebApplication1</RootNamespace>
+    <AssemblyName>WebApplication1</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <MvcBuildViews>false</MvcBuildViews>
+    <UseIISExpress>true</UseIISExpress>
+    <Use64BitIISExpress />
+    <IISExpressSSLPort>44377</IISExpressSSLPort>
+    <IISExpressAnonymousAuthentication />
+    <IISExpressWindowsAuthentication />
+    <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.DynamicData" />
+    <Reference Include="System.Web.Entity" />
+    <Reference Include="System.Web.ApplicationServices" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Abstractions" />
+    <Reference Include="System.Web.Routing" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Web.Services" />
+    <Reference Include="System.EnterpriseServices" />
+    <Reference Include="Microsoft.Web.Infrastructure, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>packages\Microsoft.Web.Infrastructure.2.0.1\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http">
+    </Reference>
+    <Reference Include="System.Net.Http.WebRequest">
+    </Reference>
+    <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>packages\Microsoft.AspNet.WebPages.3.2.9\lib\net45\System.Web.Helpers.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Mvc, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>packages\Microsoft.AspNet.Mvc.5.2.9\lib\net45\System.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Optimization">
+      <HintPath>packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>packages\Microsoft.AspNet.Razor.3.2.9\lib\net45\System.Web.Razor.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>packages\Microsoft.AspNet.WebPages.3.2.9\lib\net45\System.Web.WebPages.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>packages\Microsoft.AspNet.WebPages.3.2.9\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>packages\Microsoft.AspNet.WebPages.3.2.9\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="WebGrease">
+      <Private>True</Private>
+      <HintPath>packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
+    </Reference>
+    <Reference Include="Antlr3.Runtime">
+      <Private>True</Private>
+      <HintPath>packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
+      <HintPath>packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="favicon.ico" />
+    <Content Include="Global.asax" />
+    <Content Include="Scripts\bootstrap.bundle.js" />
+    <Content Include="Scripts\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\bootstrap.esm.js" />
+    <Content Include="Scripts\bootstrap.esm.min.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="wwwroot\css\styles.css" />
+    <Content Include="wwwroot\favicon.ico" />
+    <Content Include="wwwroot\Images\Others\Frame 32.png" />
+    <Content Include="wwwroot\Images\Others\Group 51.png" />
+    <Content Include="wwwroot\Images\Others\Group 52.png" />
     <Content Include="wwwroot\Images\Slides\apple.png" />
     <Content Include="wwwroot\Images\Slides\google.png" />
     <Content Include="wwwroot\Images\Slides\oppo.png" />
@@ -314,6 +402,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Data\" />
     <Folder Include="wwwroot\Images\Avatars\" />
+    <Folder Include="wwwroot\Images\Products\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
