--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -65,6 +65,9 @@
     <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
       <HintPath>packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="PayPal, Version=1.9.1.0, Culture=neutral, PublicKeyToken=5b4afc1ccaef40fb, processorArchitecture=MSIL">
+      <HintPath>packages\PayPal.1.9.1\lib\net451\PayPal.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -150,6 +153,7 @@
     <Compile Include="Controllers\Admin\ranksController.cs" />
     <Compile Include="Controllers\Admin\usersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PaymentController.cs" />
     <Compile Include="Controllers\ShoppingCartController.cs" />
     <Compile Include="Controllers\ShoppingController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -165,6 +169,9 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\customer.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\db_message_feedback.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\feedback.cs">
@@ -398,15 +405,8 @@
     <Content Include="wwwroot\lib\bootstrap\LICENSE" />
     <Content Include="wwwroot\lib\jquery-validation\LICENSE.md" />
     <Content Include="wwwroot\lib\jquery\dist\jquery.min.map" />
-    <Content Include="Views\Home\Cart.cshtml" />
-    <Content Include="Views\Home\Checkout.cshtml" />
-    <Content Include="Views\Home\Product.cshtml" />
-    <Content Include="Views\Home\ProductList.cshtml" />
-    <Content Include="Views\Home\Signin.cshtml" />
-    <Content Include="Views\Home\Signup.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
-    <Content Include="Views\Home\Search.cshtml" />
     <Content Include="Views\Home\Chats.cshtml" />
     <Content Include="Views\Home\Dashboard.cshtml" />
     <Content Include="Views\Home\Order.cshtml" />
@@ -445,11 +445,6 @@
     <Content Include="Views\promocodes\Details.cshtml" />
     <Content Include="Views\promocodes\Edit.cshtml" />
     <Content Include="Views\promocodes\Index.cshtml" />
-    <Content Include="Views\ranks\Create.cshtml" />
-    <Content Include="Views\ranks\Delete.cshtml" />
-    <Content Include="Views\ranks\Details.cshtml" />
-    <Content Include="Views\ranks\Edit.cshtml" />
-    <Content Include="Views\ranks\Index.cshtml" />
     <Content Include="Views\Shared\_Notifications.cshtml" />
     <Content Include="Views\Shopping\BagCart.cshtml" />
     <Content Include="Views\Shopping\Buy_now.cshtml" />
@@ -473,10 +468,16 @@
     <Content Include="Views\Shopping\CheckOutInfo.cshtml" />
     <Content Include="Views\Shopping\GetInfo.cshtml" />
     <Content Include="Views\Shopping\Promocode.cshtml" />
+    <Content Include="Views\ranks\Create.cshtml" />
+    <Content Include="Views\ranks\Delete.cshtml" />
+    <Content Include="Views\ranks\Details.cshtml" />
+    <Content Include="Views\ranks\Edit.cshtml" />
+    <Content Include="Views\ranks\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Data\" />
+    <Folder Include="Views\Payment\" />
     <Folder Include="wwwroot\Images\Avatars\" />
     <Folder Include="wwwroot\Images\New_Products\" />
   </ItemGroup>
