--- a/packages.config
+++ b/packages.config
@@ -19,5 +19,6 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
+  <package id="PayPal" version="1.9.1" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
