--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -171,9 +171,6 @@
     <Compile Include="Models\customer.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\db_message_feedback.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\feedback.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -248,6 +245,7 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="wwwroot\css\main.css" />
     <Content Include="wwwroot\css\styles.css" />
     <Content Include="wwwroot\favicon.ico" />
     <Content Include="wwwroot\Images\Others\Frame 32.png" />
